@@ -1,3 +1,9 @@
+2008-03-27  Alexander Larsson  <alexl@redhat.com>
+
+        * daemon/gvfsbackendsftp.c:
+	Introduce helpers for multi-request ops.
+	Use it for query_info.
+
 2008-03-26  Alexander Larsson  <alexl@redhat.com>
 
         * client/gdaemonfile.c:
